Fix background on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,20 @@
-body,html{overflow-x:hidden}.app{background:linear-gradient(135deg,#c3e8dc,#3d1aea,#23d5ab,#ee7752);background-size:400% 400%;animation:13s infinite gradient;min-height:100vh;overflow:auto}@keyframes gradient{0%,100%{background-position:0 50%}50%{background-position:100% 50%}}@media only screen and (max-width:768px){.logo{margin:auto}.app{background:linear-gradient(-45deg,#ee7752,#9b3654,#23a6d5,#23d5ab);animation:7s infinite gradient}}
+body,
+html {
+    overflow-x: hidden;
+}
+.app {
+    background: linear-gradient(135deg, #c3e8dc, #3d1aea, #23d5ab, #ee7752);
+    background-size: 400% 400%;
+    animation: 13s infinite gradient;
+    min-height: 100vh;
+    overflow: auto;
+}
+@keyframes gradient {
+    0%,
+    100% {
+        background-position: 0 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+}
